# ProtoSdlGame

./: CMakeLists.txt  README.md  compile_commands.json
Debug/: CMakeCache.txt  Makefile  ProtoSdlGame  cmake_install.cmake  compile_commands.json
src/: LTexture.cpp  LTexture.h  main.cpp
